--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">hom
+  <meta charset="utf-8">
   <title>Demos Launcher</title>
   <base href="/">
 
