--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
-<body>
+<body class="mat-app-background">
+  <!-- <div class="mat-typography"> --><div>
   <app-root>Loading...</app-root>
+</div>
 </body>
 </html>
